# multithread-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml
src/: CMakeLists.txt  Makefile  board.cpp  board.h  exceptions.h  global.h  interface.cpp  interface.h  main.cpp  safequeue.h  tile.cpp  tile.h  utility.cpp  utility.h
tests/: CMakeLists.txt  board_test.cpp  main.cpp  pathTo.save  utility_test.cpp
